fix link case to Links.vm
create a global macro titled: #datatitle so that we can easily change the
HTML in one location and have it update in all locations

--- a/src/templates/navigations/ScarabBottom.vm
+++ b/src/templates/navigations/ScarabBottom.vm
@@ -5,7 +5,7 @@
       <td id="globalnav">
 	&copy; 2001&nbsp;<a href="http://www.collab.net/">CollabNet</a> | 
 	<a href="http://scarab.tigris.org/">Scarab</a> |
-	<a href="$link.setPage("links.vm")">Links</a>
+	<a href="$link.setPage("Links.vm")">Links</a>
       </td>
     </tr>
   </table>
