--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -120,3 +120,13 @@ $module
             #end
         </select>
 #end
+
+#macro ( datatitle $title )
+<div class="datatitle">
+<table width="100%" cellpadding="3" cellspacing="2" border="1">
+<tr>
+<td>$title</td>
+</tr>
+</table>
+</div>
+#end
