make the comparison uppercase so that things are properly found

--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -4,14 +4,13 @@
 #set ($issue = $user.ReportingIssue)
 #set ($attrValues = $issue.ModuleAttributeValuesMap)
 
-$security
 <FORM METHOD="get" NAME="Report3Form" action="$action">
 
 <p>Please review the attributes you have set so far and fill out the remaining
 attributes to submit the issue.</p>
 
 #foreach ( $attKey in $attrValues )
-  #set ( $attVal = $attrValues.get($attKey) )
+  #set ( $attVal = $attrValues.get($attKey.toString().toUpperCase()) )
   #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
 
   #if ( $attVal.Attribute.AttributeType.ValidationKey )
@@ -62,7 +61,7 @@ attributes to submit the issue.</p>
 <hr><br>Please fill in the following:<br><br>
 
 #foreach ( $attKey in $attrValues )
-  #set ( $attVal = $attrValues.get($attKey) )
+  #set ( $attVal = $attrValues.get($attKey.toString().toUpperCase()) )
   #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
 
   #if ( $attVal.Attribute.AttributeType.ValidationKey )
