modified to work with the new css ; using "globalnav" as a class instead of id

--- a/src/templates/layouts/default.vm
+++ b/src/templates/layouts/default.vm
@@ -12,7 +12,7 @@
     <tr>
      <!-- Top -->
 
-     <td id="globalnav" colspan="2"><a href="#">globalfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a> </td>
+     <td class="globalnav" colspan="2"><a href="#">globalfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a> </td>
      <!-- Top -->
     </tr>
 
